Chart Tab Buttons Added

--- a/index.html
+++ b/index.html
@@ -141,7 +141,19 @@
                   <b>300</b>
                 </div>
               </div>
-              <div class="chart">Chart</div>
+              <div class="chart-container">
+                <div class="tabs-btns">
+                  <button class="tab-btn">Total leads</button>
+                  <button class="tab-btn">New Leads</button>
+                  <button class="tab-btn">Converted</button>
+                  <button class="tab-btn">Existing leads</button>
+                  <button class="tab-btn">Follow Ups</button>
+                  <button class="tab-btn">Whatsapp</button>
+                  <button class="tab-btn">Email</button>
+                  <button class="tab-btn">Not converted</button>
+                </div>
+                <div class="chart">chart</div>
+              </div>
             </div>
             <div class="reports-container-right">
               <div class="map-container">
