--- a/index.html
+++ b/index.html
@@ -69,25 +69,11 @@
           <div class="filters">
             <div class="select-div">
               <label for="sales">Sales person</label>
-              <select name="sales" id="sales">
-                <option value="All">All</option>
-                <option value="Person1">Person1</option>
-                <option value="Person2">Person2</option>
-                <option value="Person3">Person3</option>
-                <option value="Person4">Person4</option>
-                <option value="Person5">Person5</option>
-              </select>
+              <select name="sales" id="sales"></select>
             </div>
             <div class="select-div">
               <label for="monthly">Monthly</label>
-              <select name="monthly" id="monthly">
-                <option value="april">April</option>
-                <option value="may">May</option>
-                <option value="june">June</option>
-                <option value="july">July</option>
-                <option value="august">August</option>
-                <option value="september">September</option>
-              </select>
+              <select name="monthly" id="monthly"></select>
             </div>
             <div class="select-div">
               <label for="date">Date Range</label>
@@ -98,20 +84,13 @@
               <button class="sold-type-btn">Export</button>
             </div>
           </div>
-          <div class="all-types-of-tabs">
-            <button class="type-tab">All</button>
-            <button class="type-tab">India Mart</button>
-            <button class="type-tab">India Mart</button>
-            <button class="type-tab">India Mart</button>
-            <button class="type-tab">India Mart</button>
-            <button class="type-tab">India Mart</button>
-          </div>
+          <div id="source-tabs" class="all-types-of-tabs"></div>
           <div class="reports-container">
             <div class="reports-container-left">
               <div class="cards">
                 <div class="card blue">
                   <p>Total leads</p>
-                  <b>500</b>
+                  <b></b>
                 </div>
                 <div class="card dark-green">
                   <p>New leads</p>
@@ -168,111 +147,16 @@
                 <h1>Top 10 Demanding products</h1>
                 <div class="select-div">
                   <label for="source">Source</label>
-                  <select name="source" id="source">
-                    <option value="" hidden>Select</option>
-                    <option value="india-mart">India Mart</option>
-                    <option value="option2">Option 2</option>
-                    <option value="option3">Option 3</option>
-                    <option value="option4">Option 4</option>
-                    <option value="option5">Option 5</option>
-                  </select>
+                  <select name="source" id="source"></select>
                 </div>
                 <h2 class="source-name">India Mart</h2>
-                <ul class="product-list">
-                  <li class="product-name">1. Paracetamol 100 Mg</li>
-                  <li class="product-name">2. Paracetamol 100 Mg</li>
-                  <li class="product-name">3. Paracetamol 100 Mg</li>
-                </ul>
+                <ul class="product-list"></ul>
               </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <script>
-      const ctx = document.getElementById("barChart").getContext("2d");
-
-      function getGradient(ctx, chartArea) {
-        let gradient = ctx.createLinearGradient(
-          0,
-          chartArea.top,
-          0,
-          chartArea.bottom
-        );
-        gradient.addColorStop(0, "#A8DEFF");
-        gradient.addColorStop(0.88, "#2D3AAC");
-        return gradient;
-      }
-
-      const chartData = {
-        labels: [
-          "Jan",
-          "Feb",
-          "Mar",
-          "Apr",
-          "May",
-          "Jun",
-          "Jul",
-          "Aug",
-          "Sep",
-          "Oct",
-          "Nov",
-          "Dec",
-        ],
-        datasets: [
-          {
-            label: "Monthly Data",
-            data: [100, 40, 70, 90, 75, 80, 60, 78, 35, 65, 85, 95],
-            backgroundColor: (context) => {
-              const { chart } = context;
-              if (!chart.chartArea) return;
-              return getGradient(chart.ctx, chart.chartArea);
-            },
-            borderRadius: 25,
-          },
-        ],
-      };
-
-      const myChart = new Chart(ctx, {
-        type: "bar",
-        data: chartData,
-        options: {
-          responsive: true,
-          plugins: {
-            legend: {
-              display: false,
-            },
-          },
-          scales: {
-            legend: false,
-            y: {
-              grid: {
-                display: false,
-              },
-              ticks: {
-                display: false,
-              },
-              border: {
-                display: false,
-              },
-            },
-            x: {
-              grid: {
-                display: false,
-              },
-              ticks: {
-                color: "#20313A",
-                font: {
-                  size: 14,
-                },
-              },
-              border: {
-                display: false,
-              },
-            },
-          },
-        },
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
